--- a/bookstore/books/templates/books/home.html
+++ b/bookstore/books/templates/books/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>STX BookStore</h1>
-        <p><a href="urls " >Api specification</p>
+        <p>Api specification</p>
         <p>BookListView</p>
         <p>BookListView with filters:
             <ul>
